[package]
name = "x-oracle-passthrough"
version = "0.1.0"
authors = [ "Wesley Coakley <wesley@skip.money>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""
[dependencies]
cosmwasm-std = { version="2.1.3", features = ["cosmwasm_2_0" ] }
schemars = "0.8.21"
serde = { version = "1.0.207", default-features = false, features = ["derive"] }
connect-sdk = { path = "../../packages/connect-sdk", features = []}
